# domanek

./: .gitignore  README.md
01_processes/: meson.build
01_processes/builddir/: .ninja_log  build.ninja  compile_commands.json
01_processes/builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-targets.json  meson-info.json
01_processes/builddir/meson-logs/: meson-log.txt
01_processes/builddir/meson-private/: coredata.dat.prev
01_processes/src/: abc.cpp  charout.cpp  go
02_threads/: meson.build
02_threads/include/: car.h
02_threads/src/: car.cpp  main.cpp
03_sync1/: meson.build
03_sync1/include/: account.h
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build
04_sync2/include/: work_packet.h  work_queue.h
04_sync2/src/: main.cpp  work_queue.cpp
05_sync3/: meson.build  meson_options.txt
05_sync3/include/: philosopher.h  semaphore.h
05_sync3/src/: main.cpp  philosopher.cpp  semaphore.cpp
06_future/: meson.build
06_future/include/: InfInt.h  InfIntReadMe.txt  calc_factors.h
06_future/src/: main.cpp
07_berkeley/: meson.build
07_berkeley/include/: clock.h  pipe.h  pipe_template.h
07_berkeley/src/: clock.cpp  main.cpp
08_daytime/: meson.build  meson_options.txt
08_daytime/src/: main.cpp
08_daytime/src/daytime_client/: main.cpp
08_daytime/src/daytime_server/: main.cpp
